@@ -1,12 +1,18 @@
-package io.github.kreiseljustus.asmputils;
+package io.github.kreiseljustus.asmputils.core.modules.shop;
 
 import com.google.common.reflect.TypeToken;
 import com.google.gson.Gson;
+import io.github.kreiseljustus.asmputils.Asmputils;
+import io.github.kreiseljustus.asmputils.ModConfig;
+import io.github.kreiseljustus.asmputils.core.Utils;
+import io.github.kreiseljustus.asmputils.core.data.ShopDataHolder;
+import org.jetbrains.annotations.NotNull;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.lang.reflect.Type;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -17,27 +23,6 @@ public class ServerValidator {
     private static final Gson gson = new Gson();
 
     private static List<ShopDataHolder> s_ServerShops = new ArrayList<>();
-    private static List<WaystoneDataHolder> s_ServerWaystones = new ArrayList<>();
-
-    //We love duplicating code
-    public static List<WaystoneDataHolder> getExpectedWaystonesInChunk(int chunkX, int chunkZ) {
-        List<WaystoneDataHolder> result = new ArrayList<>();
-
-        if(s_ServerShops == null || s_ServerShops.isEmpty()) return result;
-
-        for(WaystoneDataHolder waystone : s_ServerWaystones) {
-            int[] pos = waystone.position;
-            if(pos == null || pos.length < 3) continue;
-
-            int wChunkX = pos[0] >> 4;
-            int wChunkZ = pos[2] >> 4;
-
-            if(wChunkX == chunkX && wChunkZ == chunkZ) {
-                result.add(waystone);
-            }
-        }
-        return result;
-    }
 
     public static List<ShopDataHolder> getExpectedShopsInChunk(int chunkX, int chunkZ) {
         List<ShopDataHolder> result = new ArrayList<>();
@@ -58,20 +43,39 @@ public class ServerValidator {
         return result;
     }
 
+    public static @NotNull Thread getFetcherThread() {
+        Thread fetcherThread = new Thread(() -> {
+            while (true) {
+                try {
+                    if(!ModConfig.get().enable) Thread.sleep(Asmputils.s_Config.fetcherThreadInterval);
+                    ServerValidator.getServerData();
+                } catch (Exception e) {
+                    Utils.debug("This will crash minecraft");
+                }
+
+                try {
+                    Thread.sleep(Asmputils.s_Config.fetcherThreadInterval);
+                } catch (InterruptedException e) {
+                    Thread.currentThread().interrupt();
+                    break;
+                }
+            }
+        });
+
+        fetcherThread.setDaemon(true);
+        return fetcherThread;
+    }
+
     public static void getServerData() {
         String shopJson = downloadUrl(Asmputils.s_Config.shopRoute);
-        String waystoneJson = downloadUrl(Asmputils.s_Config.waystoneRoute);
 
         Type shopListType = new TypeToken<List<ShopDataHolder>>() {}.getType();
         s_ServerShops = gson.fromJson(shopJson, shopListType);
-
-        Type waystoneListType = new TypeToken<List<WaystoneDataHolder>>() {}.getType();
-        s_ServerWaystones = gson.fromJson(waystoneJson, waystoneListType);
     }
 
     private static String downloadUrl(String urlString) {
         try {
-            URL url = new URL(urlString);
+            URL url = new URI(urlString).toURL();
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("GET");
             conn.setConnectTimeout(5000);
